engine/baml/baml/tests/validation_files/functions/nonexistent_input_output_types.baml
// test comment
function Foo {
  input Bar
  output Baz
}

//
// error
//